--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Architectural Vision</title>
+    <title>kend.esain</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500&display=swap" rel="stylesheet">
     
@@ -98,7 +98,7 @@
 
                 <!-- Title: Shakes up size based on Screen Width (Framer Style) -->
                 <h1 class="text-5xl sm:text-7xl md:text-8xl lg:text-[10rem] font-black text-white leading-[0.85] tracking-tight mb-6">
-                    Architectural<br>Vision.
+                    KEND.ESAIN<br>STUDIO
                 </h1>
 
                 <!-- Mobile: Shorter Text | Desktop: Full Text -->
