--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
     <!-- On Mobile: Rounded but fills screen | On Desktop: Floating with deep shadow -->
     <main class="relative w-full max-w-[1440px] h-[90vh] md:h-[85vh] overflow-hidden rounded-[2.5rem] md:rounded-[4rem] bg-white shadow-ios-deep">
         
-        <!-- 1. THE PHOTO (Replace './assets/hero.jpg' with your filename) -->
+        <!-- 1. THE PHOTO (Replace './assets/hero.png' with your filename) -->
         <div class="absolute inset-0">
-            <img src="./assets/hero.jpg" 
+            <img src="./assets/hero.png" 
                  class="w-full h-full object-cover" 
-                 alt="Architectural Vision"
+                 alt="Residental design"
                  onerror="this.src='https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=2600'"> <!-- Fallback if image not found -->
             
             <!-- Darkened Glass Effect Overlay -->
