--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         
         <!-- 1. THE PHOTO (Replace './assets/hero.png' with your filename) -->
         <div class="absolute inset-0">
-            <img src="assets/hero.png?v=1"  
+            <img src="assets/hero.webp"  
                  class="w-full h-full object-cover" 
                  alt="Residental design"
                  onerror="this.src='https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=2600'"> <!-- Fallback if image not found -->
