--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kend.esain</title>
+    <title>kend.design.studio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Changed font to Inter from Google Fonts -->
@@ -81,21 +81,26 @@
             </div>
         </nav>
 
-        <!-- Content -->
-        <div class="absolute inset-0 flex flex-col justify-end p-8 md:p-20 z-10">
-            <div class="max-w-5xl">
-                <div class="flex items-center gap-3 mb-4 opacity-80">
-                    <div class="h-[1px] w-6 md:w-10 bg-white"></div>
-                    <span class="text-[10px] md:text-xs font-bold tracking-[0.3em] text-white uppercase">Residential & Commercial Design</span>
+ <!-- Content -->
+        <div class="absolute inset-0 flex flex-col justify-end p-8 md:p-16 lg:p-24 z-10">
+            <div class="w-full max-w-[1400px]">
+                
+                <!-- Subtitle with line to the right -->
+                <div class="flex items-center gap-4 mb-2">
+                    <span class="text-[12px] md:text-sm font-bold tracking-[0.1em] text-white uppercase">Residential & Commercial Design</span>
+                    <div class="h-[1px] w-12 md:w-20 bg-white/40"></div>
                 </div>
 
-                <!-- Font Weight updated to 900 for that Inter look -->
-                <h1 class="text-5xl sm:text-7xl md:text-8xl lg:text-[10rem] font-black text-white leading-[0.85] tracking-tight mb-6 uppercase">
-                    KEND.ESAIN<br>STUDIO
+                <!-- Main Headline -->
+                <!-- Change the sizes in the class below to adjust text scale -->
+                <h1 class="text-[14vw] sm:text-[12vw] md:text-[10vw] lg:text-[11rem] font-black leading-[0.8] tracking-tighter uppercase mb-10">
+                    <span class="text-white">KEND.ESIGN.</span><br>
+                    <span class="text-white/40">STUDIO</span>
                 </h1>
 
-                <p class="text-white/70 text-sm md:text-lg max-w-sm md:max-w-xl font-medium leading-relaxed">
-                    Crafting spaces that breathe. Where light meets structure and form follows emotion. Timeless environments designed for the future.
+                <!-- Description at the very bottom -->
+                <p class="text-white/60 text-base md:text-xl max-w-2xl font-medium leading-snug">
+                    Crafting spaces that breathe. Where light meets structure <br class="hidden md:block"> and form follows emotion.
                 </p>
             </div>
         </div>
