--- a/index.html
+++ b/index.html
@@ -53,30 +53,39 @@
 
         /* 2. Apple Squircle Rounding (Bottom Only) */
         .apple-corners {
-            border-radius: 0 0 40px 40px;
-        }
-        @media (min-width: 768px) {
-            .apple-corners { border-radius: 0 0 64px 64px; }
-        }
+			border-radius: 0 0 40px 40px; /* Standard iOS curve */
+		}
+		@media (min-width: 768px) {
+			.apple-corners { border-radius: 0 0 64px 64px; }
+		}
+		
 
         /* 3. Hero Flush Top & Reflective Hover Border */
         .hero-container {
-            margin: 0 12px 24px 12px;
-            width: calc(100% - 24px);
-            border-radius: 0 0 3.5rem 3.5rem;
-            border: 1.5px solid transparent;
-            border-top: none;
-            position: relative;
-            overflow: hidden;
-            background: #000;
-            transition: border-color 0.6s ease, box-shadow 0.6s ease;
-        }
-        .hero-container:hover {
-            border-color: rgba(255, 255, 255, 0.5);
-            box-shadow: 
-                0 30px 60px -12px rgba(0, 0, 0, 0.5),
-                inset 0 0 20px rgba(255, 255, 255, 0.1);
-        }
+    margin: 0 12px 24px 12px; /* Mobile/iPad spacing */
+    width: calc(100% - 24px);
+    position: relative;
+    overflow: hidden;
+    background: #000;
+    border: 1.5px solid transparent; /* No border by default */
+    border-top: none;
+    transition: border-color 0.6s ease, box-shadow 0.6s ease;
+}
+
+/* Constrain to 1400px on Desktop to match CV/Featured sections */
+@media (min-width: 1440px) {
+    .hero-container {
+        max-width: 1400px;
+        margin: 0 auto 40px auto; /* Centered with bottom margin */
+        width: 100%;
+    }
+}
+
+/* Reflective White ONLY when hovered */
+.hero-container:hover {
+    border-color: rgba(255, 255, 255, 0.6);
+    box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.1), 0 0 40px rgba(0,0,0,0.2);
+}
 
         @media (min-width: 768px) {
             .hero-container {
@@ -135,33 +144,42 @@
     </nav>
 
     <!-- HERO SECTION (Sticky Scroll Engine) -->
-    <section class="relative w-full h-[100vh]">
-        <div class="hero-container sticky top-0 h-screen w-full mx-auto">
-            <div class="absolute inset-0">
-                <img src="assets/hero.webp" class="w-full h-full object-cover" alt="Hero" onerror="this.src='https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=2600'">
-                <div id="scroll-overlay" class="absolute inset-0 z-10"></div>
-                <div class="absolute inset-0 white-gloss z-5"></div>
-                <div class="absolute inset-0 image-overlay-base z-0"></div>
-            </div>
+<section class="relative w-full h-[100vh]">
+    <!-- Added 'mx-auto' and removed 'sticky' from the container to allow proper width control -->
+    <div class="hero-container apple-corners sticky top-0 h-screen overflow-hidden">
+        
+        <!-- Background Layer -->
+        <div class="absolute inset-0">
+            <img src="assets/hero.webp" class="w-full h-full object-cover" alt="Hero" onerror="this.src='https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=2600'">
+            <div id="scroll-overlay" class="absolute inset-0 z-10"></div>
+            <div class="absolute inset-0 white-gloss z-5"></div>
+            <div class="absolute inset-0 image-overlay-base z-0"></div>
+        </div>
 
-            <div class="absolute inset-0 flex flex-col justify-end p-8 md:p-20 z-20">
-                <div class="max-w-[1400px] mx-auto w-full">
-                    <div class="flex items-center gap-4 mb-4">
-                        <span class="text-[12px] md:text-sm font-bold tracking-[0.1em] text-white uppercase">Residential & Commercial Design</span>
-                        <div class="h-[1px] w-12 md:w-24 bg-white/30"></div>
-                    </div>
-                    <!-- HERO BRANDING RESTORED -->
-                    <h1 class="text-[14vw] sm:text-[12vw] md:text-[10vw] lg:text-[10rem] font-black leading-[0.8] tracking-tighter uppercase mb-10">
-                        <span class="text-white">KEND.DESIGN.</span><br>
-                        <span class="text-white/40">STUDIO</span>
-                    </h1>
-                    <p id="hero-para" class="text-white/60 text-base md:text-xl max-w-2xl font-medium leading-relaxed">
-                        Crafting spaces that breathe. Where light meets structure and form follows emotion.
-                    </p>
+        <!-- Hero Content Layer -->
+        <!-- 'px-8' ensures equal left/right padding on phone -->
+        <div class="absolute inset-0 flex flex-col justify-end px-8 pb-12 md:px-16 md:pb-20 z-20">
+            <div class="max-w-[1400px] mx-auto w-full">
+                <!-- Label -->
+                <div class="flex items-center gap-4 mb-4">
+                    <span class="text-[12px] md:text-sm font-bold tracking-[0.1em] text-white uppercase">Residential & Commercial Design</span>
+                    <div class="h-[1px] w-12 md:w-24 bg-white/30"></div>
                 </div>
+
+                <!-- Adjusted Sizing: Slightly smaller than before -->
+                <h1 class="text-[12vw] sm:text-[10vw] md:text-[8vw] lg:text-[8.5rem] font-black leading-[0.85] tracking-tighter uppercase mb-8">
+                    <span class="text-white">KEND.DESIGN.</span><br>
+                    <span class="text-white/40">STUDIO</span>
+                </h1>
+
+                <!-- Body Text -->
+                <p id="hero-para" class="text-white/60 text-base md:text-xl max-w-2xl font-medium leading-relaxed">
+                    Crafting spaces that breathe. Where light meets structure and form follows emotion.
+                </p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- FEATURED PROJECTS -->
     <section id="portfolio" class="py-24 md:py-40 px-6 md:px-16 lg:px-24">
