--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
                         </div>
                         <div class="flex flex-wrap gap-2">
                             <!-- Tools (Primary Color - Hard Skills) -->
+                            <span class="px-3 py-1.5 bg-primary rounded-lg text-[10px] font-bold text-white uppercase tracking-tighter">Ms. Office</span>
                             <span class="px-3 py-1.5 bg-primary rounded-lg text-[10px] font-bold text-white uppercase tracking-tighter">Revit</span>
                             <span class="px-3 py-1.5 bg-primary rounded-lg text-[10px] font-bold text-white uppercase tracking-tighter">AutoCAD</span>
                             <span class="px-3 py-1.5 bg-primary rounded-lg text-[10px] font-bold text-white uppercase tracking-tighter">Rhino</span>
@@ -282,7 +283,8 @@
                             <span class="px-3 py-1.5 bg-primary rounded-lg text-[10px] font-bold text-white uppercase tracking-tighter">SPSS</span>
                             <span class="px-3 py-1.5 bg-primary rounded-lg text-[10px] font-bold text-white uppercase tracking-tighter">Adobe Suite</span>
                             <!-- Skills (Accent Color - Soft Skills) -->
-                            <span class="px-3 py-1.5 bg-accent rounded-lg text-[10px] font-bold text-white uppercase tracking-tighter">Stakeholder Mgmt</span>
+                            <span class="px-3 py-1.5 bg-accent rounded-lg text-[10px] font-bold text-white uppercase tracking-tighter">Team Coordination</span>
+                            <span class="px-3 py-1.5 bg-accent rounded-lg text-[10px] font-bold text-white uppercase tracking-tighter">Stakeholder Management/span>			
                             <span class="px-3 py-1.5 bg-accent rounded-lg text-[10px] font-bold text-white uppercase tracking-tighter">Data Analysis</span>
                             <span class="px-3 py-1.5 bg-accent rounded-lg text-[10px] font-bold text-white uppercase tracking-tighter">Strategic Thinking</span>
                         </div>
@@ -325,7 +327,7 @@
                             <div class="absolute -left-[9px] top-0 w-4 h-4 rounded-full bg-white border-2 border-zinc-200 group-hover:bg-accent transition-all duration-300"></div>
                             <div class="flex flex-col md:flex-row md:items-center justify-between gap-2">
                                 <h4 class="text-2xl font-black text-primary tracking-tight">Project Architect</h4>
-                                <span class="text-xs font-black text-accent uppercase tracking-widest bg-blue-50 px-3 py-1 rounded-full w-fit">2025 – Present</span>
+                                <span class="text-xs font-black text-accent uppercase tracking-widest bg-blue-50 px-3 py-1 rounded-full w-fit">2025</span>
                             </div>
                             <p class="text-secondary font-bold mt-1">PT Agies Mitra Faathir — Batam, Indonesia</p>
                             <div class="exp-details">
