--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         }
 		/* Update the Milky Glass effect to be more opaque and cleaner */
 		.nav-glass {
-			background: rgba(255, 255, 255, 0.75); /* Milky translucent */
+			background: rgba(255, 255, 255, 0.85);
 			backdrop-filter: blur(25px);
 			-webkit-backdrop-filter: blur(25px);
-			border: 1px solid rgba(255, 255, 255, 0.4);
+			border: 1px solid rgba(255, 255, 255, 0.5);
 			box-shadow: 0 8px 32px rgba(0,0,0,0.06);
-}
-
+			padding: 6px 6px 6px 20px; /* Slimmer layout */
+		}
 /* Ensure Logo matches the font weight and style of the image */
 .nav-fixed span.font-black {
     font-weight: 900;
@@ -68,31 +68,30 @@
 		
 
         /* 3. Hero Flush Top & Reflective Hover Border */
-        .hero-container {
-			margin: 0 12px 24px 12px; /* Mobile/iPad spacing */
+		.hero-container {
+			margin: 0 12px 24px 12px; /* Mobile/Tablet margin */
 			width: calc(100% - 24px);
+			border-radius: 0 0 3.5rem 3.5rem;
+			border: 1.5px solid transparent;
+			border-top: none;
 			position: relative;
 			overflow: hidden;
 			background: #000;
-			border: 1.5px solid transparent; /* No border by default */
-			border-top: none;
 			transition: border-color 0.6s ease, box-shadow 0.6s ease;
-}
+		}
 
-/* Constrain to 1400px on Desktop to match CV/Featured sections */
+/* Desktop: Match the width of other sections (1400px) */
 		@media (min-width: 1440px) {
-		.hero-container {
-        max-width: 1400px;
-        margin: 0 auto 40px auto; /* Centered with bottom margin */
-        width: 100%;
-    }
-}
+			.hero-container {
+				max-width: 1400px;
+				margin: 0 auto 40px auto; /* Perfectly Centered */
+			}
+		}
 
-/* Reflective White ONLY when hovered */
-.hero-container:hover {
-    border-color: rgba(255, 255, 255, 0.6);
-    box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.1), 0 0 40px rgba(0,0,0,0.2);
-}
+		.hero-container:hover {
+			border-color: rgba(255, 255, 255, 0.5);
+			box-shadow: 0 30px 60px -12px rgba(0, 0, 0, 0.5), inset 0 0 20px rgba(255, 255, 255, 0.1);
+		}
 
         @media (min-width: 768px) {
             .hero-container {
@@ -138,27 +137,22 @@
 
 <!-- UPDATED NAVIGATION -->
 <nav class="nav-fixed">
-    <!-- Main Outer Pill -->
-    <div class="nav-glass p-2 rounded-full flex items-center gap-3 md:gap-6 shadow-sm">
+    <div class="nav-glass rounded-full flex items-center gap-4 md:gap-8">
+        <!-- Logo -->
+        <span class="font-black tracking-tighter text-primary text-base uppercase">KEND.</span>
         
-        <!-- Logo (Matches image position) -->
-        <span class="font-black tracking-tighter text-primary text-lg pl-4 pr-2 uppercase">KEND.</span>
-        
-        <!-- Internal Milky Menu Pill (Hidden on mobile for space) -->
-        <div class="hidden md:flex items-center gap-1 bg-white/40 rounded-full px-1 py-1 border border-white/20">
-            <a href="#portfolio" class="px-5 py-1.5 text-sm font-medium text-secondary hover:text-primary transition-colors">Projects</a>
-            <a href="#cv" class="px-5 py-1.5 text-sm font-medium text-secondary hover:text-primary transition-colors">About</a>
+        <!-- Menu Items (Background appears on hover) -->
+        <div class="hidden md:flex items-center gap-1">
+            <a href="#portfolio" class="px-4 py-1.5 text-sm font-semibold text-secondary hover:text-primary hover:bg-white/60 hover:shadow-sm rounded-full transition-all">Projects</a>
+            <a href="#cv" class="px-4 py-1.5 text-sm font-semibold text-secondary hover:text-primary hover:bg-white/60 hover:shadow-sm rounded-full transition-all">About</a>
         </div>
 
-        <!-- WhatsApp Contact Button -->
-        <a href="https://wa.me/6281390200075?text=Halo%2C%20saya%20melihat%20portfolio%20Anda%20di%20website.%20Saya%20tertarik%20untuk%20berdiskusi%20mengenai%20jasa%20desain%20arsitektur%2Finterior." 
+        <!-- WhatsApp Button: Smaller "Contact" text -->
+        <a href="https://wa.me/6281390200075?text=Halo%2C%20saya%20melihat%20portfolio%20Anda%20di%20website..." 
            target="_blank"
-           class="bg-[#25D366] hover:bg-[#128C7E] text-white px-5 py-2.5 md:px-6 md:py-2.5 rounded-full text-xs md:text-sm font-bold flex items-center gap-2 transition-all shadow-md active:scale-95">
-            Contact me 
-            <!-- WhatsApp Icon SVG -->
-            <svg class="w-4 h-4 fill-current" viewBox="0 0 24 24">
-                <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L0 24l6.335-1.662c1.72.94 3.659 1.437 5.63 1.438h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/>
-            </svg>
+           class="bg-[#25D366] hover:bg-[#128C7E] text-white px-5 py-2.5 rounded-full text-sm font-bold flex items-center gap-2 transition-all active:scale-95">
+            Contact 
+            <svg class="w-4 h-4 fill-current" viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L0 24l6.335-1.662c1.72.94 3.659 1.437 5.63 1.438h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
         </a>
     </div>
 </nav>
@@ -210,7 +204,7 @@
 
         <div class="max-w-[1400px] mx-auto grid grid-cols-1 md:grid-cols-3 gap-14">
             <div class="project-card md:col-span-2 group cursor-pointer">
-                <div class="relative overflow-hidden apple-corners bg-zinc-200 aspect-[16/10] md:h-[550px] mb-6 shadow-sm">
+                <div class="relative overflow-hidden apple-corners-full bg-zinc-200 aspect-[16/10] md:h-[550px] mb-6 shadow-sm">
                     <img src="https://images.unsplash.com/photo-1600566753190-17f0baa2a6c3?q=80&w=2600" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/20 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-500 flex flex-col justify-end p-10 md:p-16">
                         <span class="text-[10px] font-bold tracking-[0.3em] text-white/60 uppercase mb-2">Batam, Indonesia</span>
@@ -224,7 +218,7 @@
             </div>
 
             <div class="project-card md:col-span-1 group cursor-pointer">
-                <div class="relative overflow-hidden apple-corners bg-zinc-200 aspect-[4/5] md:h-[550px] mb-6 shadow-sm">
+                <div class="relative overflow-hidden apple-corners-full bg-zinc-200 aspect-[4/5] md:h-[550px] mb-6 shadow-sm">
                     <img src="https://images.unsplash.com/photo-1600607687939-ce8a6c25118c?q=80&w=2600" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-700">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/20 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-500 flex flex-col justify-end p-10">
                         <span class="text-[10px] font-bold tracking-[0.3em] text-white/60 uppercase mb-2">Jakarta, Indonesia</span>
