--- a/index.html
+++ b/index.html
@@ -30,108 +30,84 @@
         }
     </script>
 
-    <style>
-        body { background-color: #F5F5F7; margin: 0; color: #1D1D1F; overflow-x: hidden; }
+<style>
+    body { background-color: #F5F5F7; margin: 0; color: #1D1D1F; overflow-x: hidden; }
 
-        /* 1. Fixed Milky Navigation */
-        .nav-fixed {
-            position: fixed;
-            top: 24px;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 1000;
-            width: 90%;
-            max-width: fit-content;
+    /* 1. Navigation */
+    .nav-fixed {
+        position: fixed;
+        top: 24px;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 1000;
+        width: 90%;
+        max-width: fit-content;
+    }
+    .nav-glass {
+        background: rgba(255, 255, 255, 0.85);
+        backdrop-filter: blur(25px);
+        -webkit-backdrop-filter: blur(25px);
+        border: 1px solid rgba(255, 255, 255, 0.5);
+        box-shadow: 0 8px 32px rgba(0,0,0,0.06);
+        padding: 6px 6px 6px 20px;
+    }
+
+    /* 2. Hero: Centering & Shape Fix */
+    .hero-container {
+        margin: 0 auto 24px auto; /* Centered on all devices */
+        width: calc(100% - 24px);
+        max-width: 1400px; /* Matches Featured/CV section width */
+        border-radius: 0 0 40px 40px;
+        border: 1.5px solid transparent;
+        border-top: none;
+        position: relative;
+        overflow: hidden;
+        background: #000;
+        transition: border-color 0.6s ease, box-shadow 0.6s ease;
+    }
+    .hero-container:hover {
+        border-color: rgba(255, 255, 255, 0.5);
+        box-shadow: 0 30px 60px -12px rgba(0, 0, 0, 0.5), inset 0 0 20px rgba(255, 255, 255, 0.1);
+    }
+
+    @media (min-width: 768px) {
+        .hero-container {
+            width: calc(100% - 40px);
+            border-radius: 0 0 64px 64px;
+            margin-bottom: 40px;
         }
-		/* Update the Milky Glass effect to be more opaque and cleaner */
-		.nav-glass {
-			background: rgba(255, 255, 255, 0.85);
-			backdrop-filter: blur(25px);
-			-webkit-backdrop-filter: blur(25px);
-			border: 1px solid rgba(255, 255, 255, 0.5);
-			box-shadow: 0 8px 32px rgba(0,0,0,0.06);
-			padding: 6px 6px 6px 20px; /* Slimmer layout */
-		}
-/* Ensure Logo matches the font weight and style of the image */
-.nav-fixed span.font-black {
-    font-weight: 900;
-    font-size: 1.1rem;
-}
+    }
 
-        /* 2. Apple Squircle Rounding (Bottom Only) */
-        .apple-corners {
-			border-radius: 0 0 40px 40px; /* Standard iOS curve */
-		}
-		@media (min-width: 768px) {
-			.apple-corners { border-radius: 0 0 64px 64px; }
-		}
-		
+    /* 3. MISSING CLASS: Full Rounding for Projects */
+    .apple-corners-full {
+        border-radius: 40px;
+        overflow: hidden;
+    }
+    @media (min-width: 768px) {
+        .apple-corners-full { border-radius: 64px; }
+    }
 
-        /* 3. Hero Flush Top & Reflective Hover Border */
-		.hero-container {
-			margin: 0 12px 24px 12px; /* Mobile/Tablet margin */
-			width: calc(100% - 24px);
-			border-radius: 0 0 3.5rem 3.5rem;
-			border: 1.5px solid transparent;
-			border-top: none;
-			position: relative;
-			overflow: hidden;
-			background: #000;
-			transition: border-color 0.6s ease, box-shadow 0.6s ease;
-		}
-
-/* Desktop: Match the width of other sections (1400px) */
-		@media (min-width: 1440px) {
-			.hero-container {
-				max-width: 1400px;
-				margin: 0 auto 40px auto; /* Perfectly Centered */
-			}
-		}
-
-		.hero-container:hover {
-			border-color: rgba(255, 255, 255, 0.5);
-			box-shadow: 0 30px 60px -12px rgba(0, 0, 0, 0.5), inset 0 0 20px rgba(255, 255, 255, 0.1);
-		}
-
-        @media (min-width: 768px) {
-            .hero-container {
-                margin: 0 20px 40px 20px;
-                width: calc(100% - 40px);
-                border-radius: 0 0 5.5rem 5.5rem;
-            }
-        }
-
-        /* 4. White Gloss & Scroll Overlay */
-        .white-gloss {
-            background: linear-gradient(135deg, rgba(255,255,255,0.18) 0%, rgba(255,255,255,0) 50%);
-            pointer-events: none;
-        }
-        #scroll-overlay {
-            background-color: black;
-            opacity: 0;
-            pointer-events: none;
-        }
-
-        /* 5. Animations & Interaction */
-        .project-card {
-            opacity: 0;
-            transform: translateY(40px) scale(0.95);
-            transition: all 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
-        }
-        .project-card.pop-up-active { opacity: 1; transform: translateY(0) scale(1); }
-
-        .exp-details {
-            max-height: 0;
-            opacity: 0;
-            overflow: hidden;
-            transition: all 0.7s cubic-bezier(0.4, 0, 0.2, 1);
-        }
-        .is-revealed .exp-details { max-height: 1000px; opacity: 1; margin-top: 1.5rem; }
-
-        .image-overlay-base {
-            background: linear-gradient(to bottom, rgba(0,0,0,0) 40%, rgba(0,0,0,0.85) 100%);
-        }
-    </style>
+    /* 4. Effects */
+    .white-gloss {
+        background: linear-gradient(135deg, rgba(255,255,255,0.18) 0%, rgba(255,255,255,0) 50%);
+        pointer-events: none;
+    }
+    #scroll-overlay {
+        background-color: black;
+        opacity: 0;
+        pointer-events: none;
+    }
+    .exp-details {
+        max-height: 0;
+        opacity: 0;
+        overflow: hidden;
+        transition: all 0.7s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .is-revealed .exp-details { max-height: 1000px; opacity: 1; margin-top: 1.5rem; }
+    .image-overlay-base {
+        background: linear-gradient(to bottom, rgba(0,0,0,0) 40%, rgba(0,0,0,0.85) 100%);
+    }
+</style>
 </head>
 <body class="font-sans antialiased">
 
@@ -141,24 +117,53 @@
         <!-- Logo -->
         <span class="font-black tracking-tighter text-primary text-base uppercase">KEND.</span>
         
-        <!-- Menu Items (Background appears on hover) -->
+        <!-- Menu Items: Hover background effect -->
         <div class="hidden md:flex items-center gap-1">
             <a href="#portfolio" class="px-4 py-1.5 text-sm font-semibold text-secondary hover:text-primary hover:bg-white/60 hover:shadow-sm rounded-full transition-all">Projects</a>
             <a href="#cv" class="px-4 py-1.5 text-sm font-semibold text-secondary hover:text-primary hover:bg-white/60 hover:shadow-sm rounded-full transition-all">About</a>
         </div>
 
-        <!-- WhatsApp Button: Smaller "Contact" text -->
+        <!-- WhatsApp Button: Primary -> WhatsApp Green on Hover -->
         <a href="https://wa.me/6281390200075?text=Halo%2C%20saya%20melihat%20portfolio%20Anda%20di%20website..." 
            target="_blank"
-           class="bg-[#25D366] hover:bg-[#128C7E] text-white px-5 py-2.5 rounded-full text-sm font-bold flex items-center gap-2 transition-all active:scale-95">
+           class="bg-primary hover:bg-[#25D366] text-white px-5 py-2.5 rounded-full text-sm font-bold flex items-center gap-2 transition-all duration-300 active:scale-95 shadow-md">
             Contact 
-            <svg class="w-4 h-4 fill-current" viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L0 24l6.335-1.662c1.72.94 3.659 1.437 5.63 1.438h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
+            <svg class="w-4 h-4 fill-current" viewBox="0 0 24 24">
+                <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L0 24l6.335-1.662c1.72.94 3.659 1.437 5.63 1.438h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/>
+            </svg>
         </a>
     </div>
 </nav>
 
     <!-- HERO SECTION (Sticky Scroll Engine) -->
-<section class="relative w-full h-[100vh]">
+<div class="hero-container sticky top-0 h-screen overflow-hidden">
+    <!-- Background Layer -->
+    <div class="absolute inset-0">
+        <img src="assets/hero.webp" class="w-full h-full object-cover" alt="Hero" onerror="this.src='https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=2600'">
+        <div id="scroll-overlay" class="absolute inset-0 z-10"></div>
+        <div class="absolute inset-0 white-gloss z-5"></div>
+        <div class="absolute inset-0 image-overlay-base z-0"></div>
+    </div>
+
+    <!-- Content Layer: px-8 for balanced mobile padding -->
+    <div class="absolute inset-0 flex flex-col justify-end px-8 pb-12 md:px-16 md:pb-20 z-20">
+        <div class="max-w-[1400px] mx-auto w-full">
+            <div class="flex items-center gap-4 mb-4">
+                <span class="text-[12px] md:text-sm font-bold tracking-[0.1em] text-white uppercase">Residential & Commercial Design</span>
+                <div class="h-[1px] w-12 md:w-24 bg-white/30"></div>
+            </div>
+            <!-- Smaller Text: text-[11vw] instead of 14vw -->
+            <h1 class="text-[11vw] sm:text-[9vw] md:text-[8vw] lg:text-[8.5rem] font-black leading-[0.85] tracking-tighter uppercase mb-10">
+                <span class="text-white">KEND.DESIGN.</span><br>
+                <span class="text-white/40">STUDIO</span>
+            </h1>
+            <p id="hero-para" class="text-white/60 text-base md:text-xl max-w-2xl font-medium leading-relaxed">
+                Crafting spaces that breathe. Where light meets structure and form follows emotion.
+            </p>
+        </div>
+    </div>
+</div>
+
     <!-- Added 'mx-auto' and removed 'sticky' from the container to allow proper width control -->
     <div class="hero-container apple-corners sticky top-0 h-screen overflow-hidden">
         
