--- a/index.html
+++ b/index.html
@@ -39,20 +39,29 @@
 
     /* 2. Universal Site Container (The Frame) */
     .site-container {
-        max-width: 1440px;
+        max-width: 1360px;
         margin-left: auto;
         margin-right: auto;
-        width: calc(100% - 48px); /* 24px gutter on mobile */
+        width: 100%;
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+    @media (min-width: 640px) {
+        .site-container { padding-left: 32px; padding-right: 32px; }
     }
     @media (min-width: 768px) {
-        .site-container { width: calc(100% - 80px); } /* 40px gutter on tablet/desktop */
+        .site-container { padding-left: 40px; padding-right: 40px; }
+    }
+    @media (min-width: 1024px) {
+        .site-container { padding-left: 56px; padding-right: 56px; }
+    }
+    @media (min-width: 1280px) {
+        .site-container { padding-left: 72px; padding-right: 72px; }
     }
 
     /* 3. Hero Fix: Static Border & Centering */
     .hero-container {
         width: 100%;
-        max-width: 1400px;
-        margin: 0 auto;
         border-radius: 0 0 40px 40px;
         border: 1.5px solid rgba(255, 255, 255, 0.4);
         border-top: none;
