--- a/index.html
+++ b/index.html
@@ -222,12 +222,12 @@
 <!-- FOOTER / CTA -->
 <section class="pt-24 md:pt-48 pb-12 md:pb-12">
     <div class="site-container">
-        <div id="footer-spotlight-container" class="vision-mesh-animated relative w-full overflow-hidden rounded-[3rem] md:rounded-[5rem] py-24 md:py-40 px-6 text-center shadow-ios-deep group">
+        <div id="footer-spotlight-container" class="vision-mesh-animated relative w-full overflow-hidden rounded-[3rem] md:rounded-[5rem] py-12 md:py-24 px-6 text-center shadow-ios-deep group">
             
             <canvas id="footer-spotlight-canvas" class="absolute inset-0 w-full h-full z-0 pointer-events-none mix-blend-overlay"></canvas>
 
             <div class="relative z-10">
-                <h2 class="text-4xl md:text-7xl font-medium text-white tracking-tighter mb-8 uppercase">Have a vision in mind?</h2>
+                <h2 class="text-4xl md:text-7xl font-medium text-white tracking-tighter mb-8">Have a vision in mind?</h2>
                 <p class="text-white/60 text-base md:text-xl font-light mb-12 italic">Let's create something timeless together.</p>
                 
                 <a href="https://wa.me/6281390200075" target="_blank"
