--- a/index.html
+++ b/index.html
@@ -52,21 +52,15 @@
         .site-container { width: calc(100% - 80px); } /* 40px gutter on tablet/desktop */
     }
 
-    /* 3. Hero Fix: Static Border & Centering */
+    /* 3. Hero Fix: Full Screen Immersive (No Borders/Shadows) */
     .hero-container {
         width: 100%;
-        border-radius: 0 0 32px 32px;
-        border: 1.5px solid rgba(255, 255, 255, 0.4);
-        border-top: none;
         position: relative;
         overflow: hidden;
         background: #000;
-        box-shadow: 0 40px 80px -20px rgba(0, 0, 0, 0.3), inset 0 0 20px rgba(255, 255, 255, 0.1);
+        /* Removed: border-radius, border, box-shadow */
     }
-    @media (min-width: 810px) {
-        .hero-container { border-radius: 0 0 40px 40px; }
-    }
-
+    
     /* 4. Full Rounding missing class */
     .apple-corners-full { border-radius: 32px; overflow: hidden; }
     @media (min-width: 810px) { .apple-corners-full { border-radius: 40px; } }
@@ -152,7 +146,7 @@
 
 <!-- HERO SECTION -->
 <section id="hero" class="relative w-full h-[100vh]">
-    <div class="site-container h-full">
+    <div class="w-full h-full">
         <div id="hero-spotlight-container" class="hero-container sticky top-0 h-screen overflow-hidden group">
             
             <div class="absolute inset-0">
@@ -167,7 +161,7 @@
             </div>
 
             <div class="absolute inset-0 flex flex-col justify-end px-8 pb-12 md:px-16 md:pb-20 z-20 pointer-events-none">
-                <div class="w-full pointer-events-auto">
+                <div class="w-full max-w-[1440px] mx-auto pointer-events-auto"> 
                     <div class="flex items-center gap-4 mb-4">
                         <span class="text-[12px] md:text-sm font-bold tracking-[0.1em] text-white uppercase">Residential & Commercial Design</span>
                         <div class="h-[3px] w-12 md:w-24 bg-white"></div>
