--- a/index.html
+++ b/index.html
@@ -328,44 +328,54 @@
         lucide.createIcons();
 
 		// 2. SCROLL MANAGER: PARALLAX & SNAP SCROLLING (Hero <-> Scope <-> Portfolio <-> CV)
-        const overlay = document.getElementById('scroll-overlay');
-        const heroImg = document.getElementById('hero-img');
-        const heroForeground = document.getElementById('hero-foreground');
-        // Sections
-        const heroSection = document.getElementById('hero');
-        const scopeSection = document.getElementById('scope');
-        const portfolioSection = document.getElementById('portfolio');
-        const cvSection = document.getElementById('cv');
-        let isAutoScrolling = false;
-        let lastScrollY = window.scrollY;
-        window.addEventListener('scroll', () => {let scrollY = window.scrollY;let windowHeight = window.innerHeight;
-            // Detect Direction
-            let direction = scrollY > lastScrollY ? 'down' : 'up'; lastScrollY = scrollY;
+		const overlay = document.getElementById('scroll-overlay');
+		const heroImg = document.getElementById('hero-img');
+		const heroForeground = document.getElementById('hero-foreground');
 
-            // --- SNAP SCROLL LOGIC ---
-            if (!isAutoScrolling) {
-                const portfolioRect = portfolioSection.getBoundingClientRect();
-                const cvRect = cvSection.getBoundingClientRect();
+		const heroSection = document.getElementById('hero');
+		const scopeSection = document.getElementById('scope');
+		const portfolioSection = document.getElementById('portfolio');
+		const cvSection = document.getElementById('cv');
 
-                // 1. HERO <-> SCOPE Down: Trigger at 30% scroll
-                if (direction === 'down' && scrollY > (windowHeight * 0.5) && scrollY < windowHeight) {isAutoScrolling = true;
-                    scopeSection.scrollIntoView({ behavior: 'smooth' }); setTimeout(() => { isAutoScrolling = false; }, 800);}
+			let isAutoScrolling = false;
+			let lastScrollY = window.scrollY;
 
-                // 2. SCOPE <-> PORTFOLIO Down: Portfolio enters bottom 20%
-                else if (direction === 'down' && portfolioRect.top < (windowHeight * 0.5) && portfolioRect.top > 0) {isAutoScrolling = true;
-                    portfolioSection.scrollIntoView({ behavior: 'smooth' }); setTimeout(() => { isAutoScrolling = false; }, 800); }
+			window.addEventListener('scroll', () => {let scrollY = window.scrollY;let windowHeight = window.innerHeight;
+			let isDesktopLarge = window.innerWidth >= 1440; // Cek ukuran layar
 
-                // 3. PORTFOLIO <-> CV Down: CV enters bottom 20%
-                else if (direction === 'down' && cvRect.top < (windowHeight * 0.8) && cvRect.top > 0) {isAutoScrolling = true;
-                    cvSection.scrollIntoView({ behavior: 'smooth' });setTimeout(() => { isAutoScrolling = false; }, 800);}
+			// Detect Direction
+			let direction = scrollY > lastScrollY ? 'down' : 'up'; 
+			lastScrollY = scrollY;
 
-            }
-            // --- PARALLAX VISUALS (HERO ONLY) ---
-            if (scrollY <= windowHeight) {
-                if (heroImg) { heroImg.style.transform = `translateY(-${scrollY * 0.05}px) scale(1.2)`; }            
-                if (heroForeground) { heroForeground.style.opacity = Math.max(1 - (scrollY / (windowHeight * 0.4)), 0); }
-                if (overlay) { overlay.style.opacity = Math.min(scrollY / (windowHeight * 1), 0.85); }}
-        });
+			// --- A. SNAP SCROLL LOGIC (HANYA AKTIF JIKA >= 1440px) ---
+			if (!isAutoScrolling && isDesktopLarge) {
+			const portfolioRect = portfolioSection.getBoundingClientRect();
+			const cvRect = cvSection.getBoundingClientRect();
+
+			// 1. HERO <-> SCOPE Down
+			if (direction === 'down' && scrollY > (windowHeight * 0.5) && scrollY < windowHeight) {
+            isAutoScrolling = true;
+            scopeSection.scrollIntoView({ behavior: 'smooth' }); 
+            setTimeout(() => { isAutoScrolling = false; }, 800);}
+
+			// 2. SCOPE <-> PORTFOLIO Down
+			else if (direction === 'down' && portfolioRect.top < (windowHeight * 0.5) && portfolioRect.top > 0) {
+            isAutoScrolling = true;
+            portfolioSection.scrollIntoView({ behavior: 'smooth' }); 
+            setTimeout(() => { isAutoScrolling = false; }, 800);}
+
+			// 3. PORTFOLIO <-> CV Down
+			else if (direction === 'down' && cvRect.top < (windowHeight * 0.8) && cvRect.top > 0) {
+            isAutoScrolling = true;
+            cvSection.scrollIntoView({ behavior: 'smooth' });
+            setTimeout(() => { isAutoScrolling = false; }, 800);}}
+
+			// --- B. PARALLAX VISUALS (HERO ONLY) ---
+			if (scrollY <= windowHeight) {
+			if (heroImg) {heroImg.style.transform = `translateY(-${scrollY * 0.05}px) scale(1.2)`;}            
+			if (heroForeground) {heroForeground.style.opacity = Math.max(1 - (scrollY / (windowHeight * 0.4)), 0);}
+			if (overlay) {overlay.style.opacity = Math.min(scrollY / (windowHeight * 1), 0.85);}}
+		});
 		
         // 3. OBSERVERS
         const observer = new IntersectionObserver((entries) => {
